change color login button

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 }
 .log a{
     padding: 0.5rem 2rem;
-    background-color: rgb(9, 9, 14);
+    background-color: #00308F;
     color: white;
     text-decoration: none;
 }
